<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sudoku">
    <include android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/main_title"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/primary_text"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/continue_label"
            android:id="@+id/continue_button"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/secondary_text"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/new_game_label"
            android:id="@+id/new_game_button"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/secondary_text"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/settings_label"
            android:id="@+id/settings_button"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/secondary_text"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/help_label"
            android:id="@+id/help_button"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/secondary_text"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/exit_label"
            android:id="@+id/exit_button"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/secondary_text"
            android:textStyle="normal|bold" />
    </RadioGroup>
</LinearLayout>